--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Time Table</title>
     <link href="style.css" rel="stylesheet">
-    <script src="main.js" ></script>
+    <script src="main.js" defer></script>
   </head>
 
   <body>
